@@ -1,10 +1,8 @@
 package com.githubapi.githubapi.client;
 
 import com.githubapi.githubapi.dto.GitHubUsersDTO;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
-import org.springframework.web.client.RestTemplate;
-import org.springframework.web.util.UriComponentsBuilder;
+import org.springframework.web.reactive.function.client.WebClient;
 
 import java.util.Arrays;
 import java.util.List;
@@ -12,21 +10,22 @@ import java.util.List;
 @Component
 public class GitHubApiClient {
 
-    private static final String GITHUB_API_URL = "https://api.github.com/users";
+    private final WebClient webClient;
 
-    private final RestTemplate restTemplate;
-
-    @Autowired
-    public GitHubApiClient(RestTemplate restTemplate) {
-        this.restTemplate = restTemplate;
+    public GitHubApiClient(WebClient webClient) {
+        this.webClient = webClient;
     }
 
-    public List<GitHubUsersDTO> getUsers(Long since) {
-        String url = UriComponentsBuilder.fromHttpUrl(GITHUB_API_URL)
-                .queryParam("since", since)
-                .toUriString();
+    public List<GitHubUsersDTO> getUsers(long since) {
+        GitHubUsersDTO[] users = webClient.get()
+                .uri(uriBuilder -> uriBuilder
+                        .path("/users")
+                        .queryParam("since", since)
+                        .build())
+                .retrieve()
+                .bodyToMono(GitHubUsersDTO[].class)
+                .block(); // Bloqueia até a resposta chegar (útil em apps não reativos)
 
-        GitHubUsersDTO[] users = restTemplate.getForObject(url, GitHubUsersDTO[].class);
-        return Arrays.asList(users);
+        return users != null ? Arrays.asList(users) : List.of();
     }
 }
